Cargo reservas disponibles en la vista de empleado

--- a/src/main/java/com/hibernatestandalone/pantallas/PantallaGerente.form
+++ b/src/main/java/com/hibernatestandalone/pantallas/PantallaGerente.form
@@ -853,6 +853,7 @@
                     </Property>
                   </Properties>
                   <AuxValues>
+                    <AuxValue name="JavaCodeGenerator_SerializeTo" type="java.lang.String" value="PantallaGerente_ScrollHabitaciones"/>
                     <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
                   </AuxValues>
 
