--- a/src/main/java/com/hibernatestandalone/pantallas/PantallaEmpleado.form
+++ b/src/main/java/com/hibernatestandalone/pantallas/PantallaEmpleado.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
   </Properties>
@@ -42,10 +42,7 @@
                   <Component id="jPanelMenu" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" attributes="0">
-                          <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
-                          <Component id="jPanelContenido" max="32767" attributes="0"/>
-                      </Group>
+                      <Component id="jPanelContenido" max="32767" attributes="0"/>
                       <Component id="jPanelDecoracion" max="32767" attributes="0"/>
                   </Group>
               </Group>
@@ -83,10 +80,8 @@
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
                   </Group>
-                  <Group type="103" alignment="0" groupAlignment="0" attributes="0">
-                      <Component id="btnListaReservas" max="32767" attributes="0"/>
-                      <Component id="btnReservar" max="32767" attributes="0"/>
-                  </Group>
+                  <Component id="btnListaReservas" max="32767" attributes="0"/>
+                  <Component id="btnReservar" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
@@ -182,7 +177,7 @@
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace pref="1110" max="32767" attributes="0"/>
                       <Component id="jButton1" min="-2" pref="128" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                   </Group>
@@ -267,9 +262,9 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
-                          <Component id="jScrollPane2" min="-2" pref="798" max="-2" attributes="0"/>
-                          <EmptySpace pref="19" max="32767" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="jScrollPane2" min="-2" pref="443" max="-2" attributes="0"/>
+                          <EmptySpace pref="368" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -286,12 +281,12 @@
                       <Properties>
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                           <Table columnCount="6" rowCount="4">
-                            <Column editable="true" title="Selecionar" type="java.lang.Object"/>
-                            <Column editable="true" title="Numero" type="java.lang.Object"/>
-                            <Column editable="true" title="Piso" type="java.lang.Object"/>
-                            <Column editable="true" title="Capacidad de Personas" type="java.lang.Object"/>
-                            <Column editable="true" title="Precio" type="java.lang.Object"/>
-                            <Column editable="true" title="Descripcion" type="java.lang.Object"/>
+                            <Column editable="true" title="Selecionar" type="java.lang.Boolean"/>
+                            <Column editable="false" title="Numero" type="java.lang.String"/>
+                            <Column editable="false" title="Piso" type="java.lang.Integer"/>
+                            <Column editable="false" title="Capacidad de Personas" type="java.lang.Integer"/>
+                            <Column editable="false" title="Precio" type="java.lang.Double"/>
+                            <Column editable="false" title="Descripcion" type="java.lang.String"/>
                           </Table>
                         </Property>
                         <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -391,7 +386,7 @@
                 </DimensionLayout>
                 <DimensionLayout dim="1">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jScrollPane1" alignment="0" pref="862" max="32767" attributes="0"/>
+                      <Component id="jScrollPane1" alignment="0" pref="895" max="32767" attributes="0"/>
                   </Group>
                 </DimensionLayout>
               </Layout>
